# pol-inv

./: LICENSE  README.md  setup.cfg  setup.py
examples/: Finding_polymorphisms_satisfying_h1_equations.ipynb
pol_inv/: __init__.py  equations.py  errors.py  relational_structure.py  sat_translator.py  solver_callers.py  terms_and_operations.py
