[metadata]
    name = pol-inv
    version = 0.1.0
    author = Alexandr Kazda
    author_email = alex.kazda@gmail.com
    description = Package for computing polymorphisms in universal algebra
    long_description = file: README.md
    long_description_content_type = text/markdown
    url = https://github.com/alex-kazda/pol-inv
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
[options]
    packages = pol_inv
    install_requires = 
        python-sat
